--- a/angularjs+nodejs+express/package.json
+++ b/angularjs+nodejs+express/package.json
@@ -1,26 +1,35 @@
 {
-  "name": "login",
-  "private": true,
+  "name": "meu-projeto",
+  "version": "0.0.1",
+  "description": "Meu íncrivel projeto",
+  "homepage": "http://vagnersantana.com/meuprojeto",
+  "repository": {
+    "type": "git",
+    "url": "http://github.com/vagnervjs/meu-projeto"
+  },
+  "engines": {
+    "node": "0.8.x",
+    "npm": "1.1.x"
+  },
   "devDependencies": {
     "autoprefixer-core": "^5.2.1",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-compass": "^1.0.0",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-contrib-copy": "^0.7.0",
     "grunt-contrib-cssmin": "^0.12.0",
     "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-imagemin": "^0.9.2",
     "grunt-contrib-jshint": "^0.11.0",
+    "grunt-contrib-sass": "~0.9.2",
     "grunt-contrib-uglify": "^0.7.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-filerev": "^2.1.2",
     "grunt-google-cdn": "^0.4.3",
     "grunt-jscs": "^1.8.0",
-    "grunt-karma": "*",
     "grunt-newer": "^1.1.0",
     "grunt-ng-annotate": "^0.9.2",
     "grunt-postcss": "^0.5.5",
@@ -28,15 +37,22 @@
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
     "jit-grunt": "^0.9.1",
+    "time-grunt": "^1.0.0",
     "jshint-stylish": "^1.0.0",
-    "karma-jasmine": "*",
-    "karma-phantomjs-launcher": "*",
-    "time-grunt": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "grunt-cli": "0.1.6",
+    "bower": "~1.7.1",
+    "grunt-env": "~0.4.1",
+    "grunt-injector": "^0.5.4",
+    "karma-babel-preprocessor": "^5.2.1",
+    "grunt-babel": "~5.0.0"
   },
   "scripts": {
-    "test": "grunt test"
+    "start": "node server/app.js",
+    "test": "grunt test",
+    "update-webdriver": "node node_modules/grunt-protractor-runner/node_modules/protractor/bin/webdriver-manager update"
+  },
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "express": "^4.13.3"
   }
 }
