--- a/angularjs/bower.json
+++ b/angularjs/bower.json
@@ -1,26 +1,23 @@
 {
-  "name": "angularjs",
-  "homepage": "https://github.com/henryqrm/studies",
-  "description": "Estudos referente ao angulaJS",
-  "main": "main.js",
-  "moduleType": [
-    "node"
-  ],
-  "authors": [
-    "HenryQRM"
-  ],
-  "license": "MIT",
-  "private": true,
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
+  "name": "login",
+  "version": "0.0.0",
   "dependencies": {
-    "angular": "angularjs#~1.4.8",
-    "bootstrap-ui": "~0.14.3",
-    "bootstrap": "~3.3.6"
+    "angular": "^1.4.0",
+    "bootstrap-sass-official": "^3.2.0",
+    "angular-ui-router": "~0.2.15"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.4.0"
+  },
+  "appPath": "app",
+  "moduleName": "loginApp",
+  "overrides": {
+    "bootstrap": {
+      "main": [
+        "less/bootstrap.less",
+        "dist/css/bootstrap.css",
+        "dist/js/bootstrap.js"
+      ]
+    }
   }
 }
