--- a/angularjs/loginApp/bower.json
+++ b/angularjs/loginApp/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "angularjs",
+  "name": "login",
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
@@ -10,7 +10,7 @@
     "angular-mocks": "^1.4.0"
   },
   "appPath": "app",
-  "moduleName": "angularjsApp",
+  "moduleName": "loginApp",
   "overrides": {
     "bootstrap": {
       "main": [
