--- a/angularjs/loginApp/test/.jshintrc
+++ b/angularjs/loginApp/test/.jshintrc
@@ -4,13 +4,15 @@
   "curly": true,
   "eqeqeq": true,
   "esnext": true,
+  "jasmine": true,
   "latedef": true,
   "noarg": true,
   "node": true,
-  "strict": false,
+  "strict": true,
   "undef": true,
   "unused": true,
   "globals": {
-    "angular": false
+    "angular": false,
+    "inject": false
   }
 }
